--- a/t4/style.css
+++ b/t4/style.css
@@ -15,6 +15,7 @@ body {
 form {
     display: flex;
     flex-direction: column;
+    width: 35vw;
     padding: 30px;
     color: white;
     background: rgba(0, 0, 0, 0.8);
@@ -22,8 +23,15 @@ form {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 1);
 }
 
+@media screen and (max-width: 800px) {
+    form {
+        width: 95%;
+    }
+}
+
 .form-item {
     margin-bottom: 20px;
+    padding-left: 5%;
 }
 
 .form-head {
