--- a/t5/style.css
+++ b/t5/style.css
@@ -185,5 +185,5 @@ select {
     right: 0px;
     padding: 10px;
     font-size: 20px;
-    background-color: #b5ebbf;
+    background-color: #00000054;
 }
