--- a/t5/style.css
+++ b/t5/style.css
@@ -206,8 +206,8 @@ select {
     font-size: larger;
     text-decoration: none;
     border: 1px solid #00b5fc;
-    border-top: none;
-    border-bottom: none;
+    border-top: 1px solid #00b5fc6e;
+    border-bottom: 1px solid #00b5fc6e;
     border-radius: 4px;
     padding: 3px;
     padding-left: 7px;
