--- a/t6/db.css
+++ b/t6/db.css
@@ -1,6 +1,14 @@
 body {
-    font-size: large;
-    background: #eceffc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    min-height: 98vh;
+    background-color: #444c4f;
+    opacity: 1;
+    background-image:  radial-gradient(#0089fc 1.1px, transparent 1.1px), radial-gradient(#0089fc 1.1px, #444c4f 1.1px);
+    background-size: 44px 44px;
+    background-position: 0 0,22px 22px;
     font-family: Montserrat;
 }
 
@@ -10,12 +18,14 @@ table {
 }
 
 td, th {
+    color: white;
     padding: 8px;
     border: 1px solid black; 
+    background: #ffffff;
 }
 
 th {
-    background: #b0e0e6; 
+    background: #ffffff; 
 }
 
 textarea {
