--- a/t6/db.css
+++ b/t6/db.css
@@ -14,13 +14,13 @@ body {
 table { 
     border-collapse: collapse; 
     text-align: center;
-    background: #464646ad;
+    background: rgba(0, 0, 0, 0.8);
+    color: white;
 }
 
 td, th {
-    color: white;
     padding: 8px;
-    border: 1px solid black; 
+    border: 2px solid black; 
 }
 
 th {
