--- a/t6/db.css
+++ b/t6/db.css
@@ -13,12 +13,12 @@ body {
 
 table { 
     border-collapse: collapse; 
-    text-align: center;
     background: rgba(0, 0, 0, 0.8);
     color: white;
 }
 
 td, th {
+    padding: 8px;
     border: 2px solid black; 
 }
 
