--- a/t6/db.css
+++ b/t6/db.css
@@ -1,8 +1,5 @@
 body {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
     min-height: 98vh;
     background-color: #444c4f;
     opacity: 1;
@@ -47,6 +44,8 @@ select {
 
 caption {
     font-size: x-large;
+    margin-top: 40px;
+    margin-bottom: 10px;
 }
 
 .msgbox {
