--- a/t6/db.css
+++ b/t6/db.css
@@ -1,6 +1,7 @@
 body {
     display: flex;
     min-height: 98vh;
+    flex-direction: row;
     background-color: #444c4f;
     opacity: 1;
     background-image:  radial-gradient(#0089fc 1.1px, transparent 1.1px), radial-gradient(#0089fc 1.1px, #444c4f 1.1px);
